Bug #737041 - Improve contrast on menu's

--- a/themes/minimal/style.css
+++ b/themes/minimal/style.css
@@ -189,6 +189,8 @@ html[dir='rtl'] .favorites_form {
 
 /* --- end headers --- */
 
+
+
 h2 {
 	color: black;
 	font: bold 18px tahoma, arial, helvetica, sans-serif;
@@ -263,7 +265,7 @@ table.center{
 
 .list_label, .list_label_wrap {
 	color: black;
-	background-color: #aaaaaa;
+	background-color: ;
 	font: 12px tahoma, arial, helvetica, sans-serif;
 	text-align: center;
 }
@@ -294,7 +296,6 @@ table.center{
 
 .facts_label {
 	color: black;
-	background-color: #aaaaaa;
 	font: 12px tahoma, arial, helvetica, sans-serif;
 	padding: 4px 4px 4px 4px;
 	width: 20%;
@@ -303,7 +304,6 @@ table.center{
 
 .facts_label02, .facts_label03 {
 	color: black;
-	background-color: #aaaaaa;
 	font: bold 12px tahoma, arial, helvetica, sans-serif;
 	padding: 4px 4px 4px 4px;
 	width: 20%;
@@ -311,7 +311,6 @@ table.center{
 }
 
 .facts_value {
-	background-color: white;
 	color: black;
 	border: solid black 1px;
 	font: 12px tahoma, arial, helvetica, sans-serif;
@@ -319,7 +318,6 @@ table.center{
 }
 
 .facts_value02 {
-	background-color: white;
 	color: black;
 	border: solid black 1px;
 	font: 12px tahoma, arial, helvetica, sans-serif;
@@ -328,7 +326,6 @@ table.center{
 
 .facts_labelred, .facts_labelblue {
 	color: #333333;
-	background-color: #aaaaaa;
 	font: 12px tahoma, arial, helvetica, sans-serif;
 	padding: 4px 4px 4px 4px;
 	width: 20%;
@@ -336,7 +333,6 @@ table.center{
 }
 
 .facts_valuered, .facts_valueblue {
-	background-color: white;
 	color: black;
 	font: 12px tahoma, arial, helvetica, sans-serif;
 	padding: 4px 4px 4px 4px;
@@ -355,7 +351,6 @@ table.center{
 }
 
 .tab_cell_active {
-	background-color: white;
 	border-left: outset #aaaaaa 2px;
 	border-top: outset #aaaaaa 2px;
 	border-right: outset #aaaaaa 2px;
@@ -363,7 +358,6 @@ table.center{
 }
 
 .tab_cell_inactive {
-	background-color: #aaaaaa;
 	border-left: solid black 2px;
 	border-top: solid black 2px;
 	border-right: outset black 2px;
@@ -394,7 +388,6 @@ table.center{
 }
 
 .tab_cell_inactive_empty {
-	background-color: #bababa;
 	border-left: solid black 2px;
 	border-top: solid black 2px;
 	border-right: outset black 2px;
@@ -573,7 +566,6 @@ html[dir='rtl'] .icon, html[dir='rtl'] .adminicon {
 
 .sublinks_cell {
 	font-size: 12px;
-	background-color: #aaaaaa;
 }
 
 .sublinks_table .icon {
@@ -602,7 +594,6 @@ html[dir='rtl'] .icon, html[dir='rtl'] .adminicon {
 }
 
 .selected-option {
-	background-color: #aaaaaa;
 	border: solid black 1px;
 }
 
@@ -709,7 +700,6 @@ html[dir='rtl'] .submenuitem { text-align: right; }
 }
 
 .news_box {
-	background-color: white;
 	border: solid black 1px;
 }
 
@@ -790,7 +780,6 @@ html[dir='rtl'] .submenuitem { text-align: right; }
 }
 
 .block {
-	background-color: white;
 	color: black;
 	border: solid black 2px;
 	font: 12px tahoma, arial, helvetica, sans-serif;
@@ -989,7 +978,6 @@ left:auto;
 /* Style for the top and bottom bar */
 .topbottombar {
 	color: black;
-	background-color: #aaaaaa;
 	font: bold 12px tahoma, arial, helvetica, sans-serif;
 	padding: 4px;
 	text-align: center;
@@ -997,7 +985,6 @@ left:auto;
 
 /* Style for the subbar in  */
 .subbar {
-	background-color: white;
 	color: black;
 	border: solid black 1px;
 	font: 11px tahoma, arial, helvetica, sans-serif;
@@ -1008,7 +995,6 @@ left:auto;
 
 /* Style for the descriptionbox */
 .descriptionbox {
-	background-color: white;
 	color: black;
 	border: solid black 1px;
 	font: 12px tahoma, arial, helvetica, sans-serif;
@@ -1019,7 +1005,6 @@ left:auto;
 
 /* Style for the optionbox */
 .optionbox {
-	background-color: white;
 	color: black;
 	border: solid black 1px;
 	font: 12px tahoma, arial, helvetica, sans-serif;
@@ -1111,7 +1096,6 @@ left:auto;
 
 /* Message box */
 .messagebox {
-	background-color: white;
 	border: solid black 1px;
 }
 
@@ -1155,7 +1139,6 @@ a.showit:hover span {
 	border-bottom: 2px solid black;
 	border-right: 2px solid black;
 	padding: 3px;
-	background: #4f4f4f;
 	color: white;
 	font: 15px tahoma, arial, helvetica, sans-serif;
 	text-align: left;
@@ -1192,7 +1175,6 @@ a.showit:hover span {
 	left: -10px;
 	top:-65px;
 	z-index:2;
-	background-color: white
 }
 
 .lifespan_people {
@@ -1204,7 +1186,6 @@ a.showit:hover span {
 }
 .iwstyle {
 	width:360px;
-	/*background-color: #FFFFFF;*/
 }
 .iwstyle a {
 }
@@ -1245,7 +1226,6 @@ a.showit:hover span {
 	}
 	#map_type li.non_active
 	{
-		background: white;
 		color: black;
 		font-weight: normal;
 	}
@@ -1275,7 +1255,6 @@ a.showit:hover span {
 .ac_results {
 	padding: 0px;
 	border: 1px solid black;
-	background-color: white;
 	overflow: hidden;
 	z-index: 99999;
 }
@@ -1493,18 +1472,14 @@ table.tablesorter tbody td {
 	padding: 4px;
 	vertical-align: top;
 }
-table.tablesorter tbody tr.odd td {
-	background-color:#DDD;
-}
+
 table.tablesorter thead tr .headerSortUp {
 	background-image: url(images/jquery/asc.gif);
 }
 table.tablesorter thead tr .headerSortDown {
 	background-image: url(images/jquery/desc.gif);
 }
-table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-	background-color: #DDD;
-}
+
 div.pager {
 	margin-top: -20px;
 	text-align: left;
@@ -1541,11 +1516,9 @@ div.pager input {
 	font-weight:bold;
 }
 #tabDefinedTags tr.sel {
-	background-color:#D1D9EF;
 	color:#888;
 }
 #tabDefinedTags tr.unsel {
-	background-color:#FFFFFF;
 	color:#888;
 }
 #tabDefinedTagsShow {
@@ -1570,15 +1543,12 @@ div.pager input {
 }
 /* FAQ table styles */
 table.faq   {
-	background-color: #DDD;
 	margin:5px 0 50px 5px;
 	width: 98%;
 }
 table.faq  tr.odd td {
-	background-color:#fff;
 }
 div.faq_title {
-	background-color: #DDD;
 	margin: 1em 0 0 1em;
 	padding: .25em;
 	font-weight:bold;
@@ -1633,4 +1603,10 @@ html[dir='rtl'] .editlink, html[dir='rtl'] .copylink , html[dir='rtl'] .deleteli
 .logo {
 	text-align: center;
 }
+/*
+.blockcontent .facts_label, th.list_label, td.list_label, td.facts_label, td.topbottombar, td.facts_label03 {
+background: white;
+border: 1px solid #000;
+}
 
+.htheme option, .htheme select, .optionbox select, .topbottombar input, .list_value select, td.optionbox input, td.list_value input, span.age { background: white; }*/
